stopped the bleed

--- a/food_truck/foodstyle.css
+++ b/food_truck/foodstyle.css
@@ -51,6 +51,7 @@ background-color: #FFF5C5;
 }
 body{
   background-color: #FFF5C5;
+  width: 1600px
 }
 a:link {
   color:white;
